--- a/css/styles.css
+++ b/css/styles.css
@@ -282,7 +282,7 @@ ul{
     color: white;
     margin-left: 8%;
     margin-top: -4%;
-    margin-bottom: 3%;
+    margin-bottom: 3%
   }
   #menu2{
     margin-top: 3em;
