--- a/css/styles.css
+++ b/css/styles.css
@@ -275,7 +275,7 @@ ul{
   .footer-bkgrnd{
     margin-top: -27%;
     margin-left: 40%;
-    font-family: serif;
+    font-family: serif
     
   }
   #menu{
