--- a/css/styles.css
+++ b/css/styles.css
@@ -261,7 +261,7 @@ ul{
   .btn.btn-email{
     background-color: #F15A29;
     color: white;
-    font-family: serif;
+    font-family: serif
   
   }
   .img4{
