eddited html file

--- a/css/styles.css
+++ b/css/styles.css
@@ -241,7 +241,7 @@ ul{
   .h3text{
     color:#F15A29;
     font-family: serif;
-    font-size: 30px;
+    font-size: 30px
   }
   .img3{
     width:101.49%
